# darkvault

./: .gitignore  .replit  Cargo.toml  Makefile  README.md  darkvault.toml  mdsvex.config.js  package.json  replit.nix  svelte.config.js  windi.config.ts
.github/workflows/: release.yml
src/: hooks.js  main.rs
src/lib/: metastore.ts
src/lib/components/: FileLayout.svelte
src/routes/: [...files].svelte  __error.svelte  __layout.svelte
src/routes/about/: __layout.svelte  index.md
